--- a/recipe/package.json
+++ b/recipe/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:vercel": "vercel dev",
+    "dev:vercel": "npx vercel@latest dev",
+    "setup:vercel": "./setup-vercel.sh",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -28,7 +29,6 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
@@ -44,7 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "postcss": "^8.5.6",
     "prisma": "^6.15.0",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.7.2",
     "vercel": "^28.18.5",
     "vite": "^6.0.5"
