--- a/recipe/vercel.json
+++ b/recipe/vercel.json
@@ -2,6 +2,5 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "rootDirectory": "."
+  "framework": "vite"
 }
