Update vercel.json: Remove rootDirectory (use root), set outputDirectory to .next

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "rootDirectory": "."
+  "outputDirectory": ".next"
 }
 
