--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "next": "15.5.9",
+    "next-auth": "^5.0.0-beta.30",
     "posthog-js": "^1.328.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.12.0",
