fix: next.js auth v5 setup

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ API_PROPERTIES_VERIFICATION.md
 HETZNER_VPS_MIGRATION_GUIDE.md
 VERCEL_ENV_CHECKLIST.md
 DROPDOWN_TEST_CREDENTIALS_DOCS.md
+UI_STYLING_GUIDE.md
