--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.10.0",
     "@auth0/nextjs-auth0": "^3.4.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -39,9 +40,11 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.3.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
