add: navbar profile dropdown with avatar, dropdown menu, and fix skeleton flash on login

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ HETZNER_VPS_MIGRATION_GUIDE.md
 VERCEL_ENV_CHECKLIST.md
 DROPDOWN_TEST_CREDENTIALS_DOCS.md
 UI_STYLING_GUIDE.md
+AUTH_UI_IMPLEMENTATION_GUIDE.md
